manifests/download/browser/deployment.yml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: s3browser-server

spec:
  template:
    spec:
      containers:
        - name: server

...
