manifests/download/browser/networkpolicy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: s3browser-server
  labels:
    app.kubernetes.io/name: s3browser
    app.kubernetes.io/component: server

spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: s3browser
      app.kubernetes.io/component: server

  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
      ports:
        - protocol: TCP
          port: 80

  egress:
    - {}

...
